@@ -81,7 +81,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="True"/>
             <field name="perm_create" eval="True"/>
-            <field name="perm_delete" eval="False"/>
+            <field name="perm_delete" eval="True"/>
         </record>
         <record model="ir.model.access" id="access_account_invoice_payment_term_group_financial_manage">
             <field name="model" search="[('model', '=', 'account.invoice.payment_term')]"/>
