@@ -1,3 +1,4 @@
+* BUG#9650 Do not try to cancel prepayment on non-contract related invoices
 * BUG#9613 Fix on rights of prepayment commisisons creation
 * FEA#8963 Add an option on the commission plan so that prepayment is only due at first paid invoice
 * BUG#9262 Fix redeemed while synchronizing prepayment
